--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -45,3 +45,220 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+
+/* Typography */
+body {
+  color: #888;
+  font: 300 16px/22px "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  /* font-weight: 500; */
+}
+
+/* universal selector */
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+/* .container {
+  margin: 0 auto;
+  padding-left: 30px;
+  padding-right: 30px;
+  width: 960px;
+} */
+
+
+/* Typography */
+h1, h3, h4, h5, p {
+  margin-bottom: 22px;
+}
+
+/* Button */
+
+.btn {
+  border-radius: 5px;
+  display: inline-block;
+  margin: 0;
+}
+
+.btn-alt {
+  border: 1px solid #dfe2e5;
+  padding: 10px 30px;
+}
+
+.hero {
+  padding: 22px 80px 66px 80px;
+  line-height: 44px;
+}
+.hero-inner {
+  padding-left: 60px;
+}
+
+.hero h2 {
+  font-size: 36px;
+}
+
+.hero p {
+  font-size: 24px;
+}
+
+/* Clearfix */
+.group:before,
+.group:after {
+  content: "";
+  display: table;
+}
+.group:after {
+  display: table;
+  clear: both;
+}
+.group {
+  clear: both;
+  /* *zoom: 1; */
+}
+
+/* header */
+.logo {
+  float: left;
+  border-top: 4px solid #648880;
+  padding: 40px 0 22px 0;
+
+  font-size: 48px;
+  line-height: 44px;
+}
+
+/* footer */
+.primary-footer small {
+  float: left;
+  /* font-weight: 400; */
+}
+
+.primary-footer {
+  padding: 44px 0;
+  /* padding-top: 44px;
+  padding-bottom: 44px; */
+  color: #648880;
+  font-size: 14px;
+}
+
+/* grid */
+.col-1-3 {
+  width: 33.33%;
+  /* font-size: 16px; */
+  /* background-color: lightsalmon; */
+  /* outline: 2px solid red; */
+}
+
+.col-2-3 {
+  width: 66.66%;
+}
+
+.col-1-3,
+.col-2-3 {
+  display: inline-block;
+  vertical-align: top;
+  font-size: 16px;
+}
+
+.grid, .col-1-3, .col-2-3 {
+  /* padding: 0 15px; */
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.container {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.container, .grid {
+  margin: 0 auto;
+  width: 960px;
+}
+
+.grid {
+  font-size: 0;
+  /* background-color: lightyellow; */
+}
+
+/* .col-1-3:nth-child(1) { background: lightcoral; }
+.col-1-3:nth-child(2) { background: lightgreen; }
+.col-1-3:nth-child(3) { background: lightskyblue; } */
+
+@media (max-width: 768px) {
+  .col-1-3 {
+    width: 50%;
+  }
+}
+
+@media (max-width: 480px) {
+  .col-1-3 {
+    width: 100%;
+  }
+}
+
+
+/* Typography */
+
+h1, h2, h3, h4 {
+  color: #648880;
+}
+
+h1 {
+  font-size: 36px;
+  line-height: 44px;
+}
+
+h2 {
+  font-size: 24px;
+  line-height: 44px;
+}
+
+h3 {
+  font-size: 21px;
+}
+
+h4 {
+  font-size: 18px;
+}
+
+h5 {
+  color: #a9b2b9;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+strong {
+  font-weight: 400;
+}
+
+cite, em {
+  font-style: italic;
+}
+
+a{
+  color: #648880;
+}
+
+a:hover {
+  color: #a9b2b9;
+}
+
+.teaser a:hover h3 {
+  color: #a9b2b9;
+}
+
+.tagline {
+  margin: 66px 0 22px 0;
+}
+
+.primary-nav {
+  font-size: 14px;
+  font-weight: 400;
+}
+
+
+
